fix backup utilities via pgbackrest

--- a/backup/pgbackrest.conf
+++ b/backup/pgbackrest.conf
@@ -1,7 +1,7 @@
 [global]
 repo1-path=/backups
-repo1-retention-full=4            # Храним 4 полных бэкапа
-repo1-retention-diff=30           # И 30 дней инкрементальных
+repo1-retention-full=4
+repo1-retention-diff=30
 log-level-console=info
 start-fast=y
 
