--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -209,6 +209,8 @@ volumes:
     driver: local
   consul-agent-data:
     driver: local
+  pg-dumps:
+    driver: local
 networks:
   app-net:
     driver: bridge
