--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -186,7 +186,7 @@ services:
     container_name: pg-dump-backup
     environment:
       PGUSER: postgres_user
-      PGPASSWORD: postgres_password
+      PGPASSWORD: postgres_admin
     volumes:
       - pg_dumps:/backups
     depends_on:
