fix physical backup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,7 +89,9 @@ services:
       - ./postgres-init/pg_hba.conf:/etc/postgresql/pg_hba.conf
       - ./postgres-init/postgresql.conf:/etc/postgresql/postgresql.conf
       - ./postgres-init/init.sql:/docker-entrypoint-initdb.d/init.sql
-    command: postgres -c config_file=/etc/postgresql/postgresql.conf
+    command: >
+      chmod 777 /etc/postgresql/postgresql.conf
+      postgres -c config_file=/etc/postgresql/postgresql.conf
     networks:
       - app-net
 
@@ -107,7 +109,9 @@ services:
       - ./postgres-init/pg_hba.conf:/etc/postgresql/pg_hba.conf
       - ./postgres-init/postgresql.conf:/etc/postgresql/postgresql.conf
       - ./postgres-init/init.sql:/docker-entrypoint-initdb.d/init.sql
-    command: postgres -c config_file=/etc/postgresql/postgresql.conf
+    command: >
+      chmod 777 /etc/postgresql/postgresql.conf
+      postgres -c config_file=/etc/postgresql/postgresql.conf
     networks:
       - app-net
 
@@ -125,7 +129,9 @@ services:
       - ./postgres-init/pg_hba.conf:/etc/postgresql/pg_hba.conf
       - ./postgres-init/postgresql.conf:/etc/postgresql/postgresql.conf
       - ./postgres-init/init.sql:/docker-entrypoint-initdb.d/init.sql
-    command: postgres -c config_file=/etc/postgresql/postgresql.conf
+    command: >
+      chmod 777 /etc/postgresql/postgresql.conf
+      postgres -c config_file=/etc/postgresql/postgresql.conf
     networks:
       - app-net
 
@@ -143,7 +149,9 @@ services:
       - ./postgres-init/pg_hba.conf:/etc/postgresql/pg_hba.conf
       - ./postgres-init/postgresql.conf:/etc/postgresql/postgresql.conf
       - ./postgres-init/init.sql:/docker-entrypoint-initdb.d/init.sql
-    command: postgres -c config_file=/etc/postgresql/postgresql.conf
+    command: >
+      chmod 777 /etc/postgresql/postgresql.conf
+      postgres -c config_file=/etc/postgresql/postgresql.conf
     networks:
       - app-net
   consul-server:
