--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -86,11 +86,6 @@ services:
       POSTGRES_DB: user
     volumes:
       - user_postgres_data:/var/lib/postgresql/data
-      - ./postgres-init/pg_hba.conf:/etc/postgresql/pg_hba.conf
-      - ./postgres-init/postgresql.conf:/etc/postgresql/postgresql.conf
-      - ./postgres-init/init.sql:/docker-entrypoint-initdb.d/init.sql
-    command:
-      postgres -c config_file=/etc/postgresql/postgresql.conf
     networks:
       - app-net
 
@@ -105,11 +100,6 @@ services:
       POSTGRES_DB: daily-report
     volumes:
       - daily_postgres_data:/var/lib/postgresql/data
-      - ./postgres-init/pg_hba.conf:/etc/postgresql/pg_hba.conf
-      - ./postgres-init/postgresql.conf:/etc/postgresql/postgresql.conf
-      - ./postgres-init/init.sql:/docker-entrypoint-initdb.d/init.sql
-    command:
-      postgres -c config_file=/etc/postgresql/postgresql.conf
     networks:
       - app-net
 
@@ -124,11 +114,6 @@ services:
       POSTGRES_DB: five-minute-report
     volumes:
       - five_minute_postgres_data:/var/lib/postgresql/data
-      - ./postgres-init/pg_hba.conf:/etc/postgresql/pg_hba.conf
-      - ./postgres-init/postgresql.conf:/etc/postgresql/postgresql.conf
-      - ./postgres-init/init.sql:/docker-entrypoint-initdb.d/init.sql
-    command:
-      postgres -c config_file=/etc/postgresql/postgresql.conf
     networks:
       - app-net
 
@@ -143,11 +128,6 @@ services:
       POSTGRES_DB: mode-report
     volumes:
       - mode_postgres_data:/var/lib/postgresql/data
-      - ./postgres-init/pg_hba.conf:/etc/postgresql/pg_hba.conf
-      - ./postgres-init/postgresql.conf:/etc/postgresql/postgresql.conf
-      - ./postgres-init/init.sql:/docker-entrypoint-initdb.d/init.sql
-    command:
-      postgres -c config_file=/etc/postgresql/postgresql.conf
     networks:
       - app-net
   consul-server:
@@ -212,6 +192,7 @@ services:
       PGPASSWORD: postgres_password
     volumes:
       - pg_dumps:/backups
+      - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
       - user_db
       - daily-report_db
@@ -219,6 +200,7 @@ services:
       - mode-report_db
     networks:
       - app-net
+
 
 volumes:
   mode_postgres_data:
