fix physical backup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,6 +75,7 @@ services:
       - config-server
     networks:
       - app-net
+
   user_db:
     image: postgres:17.2
     container_name: user_db
@@ -86,6 +87,10 @@ services:
       POSTGRES_DB: user
     volumes:
       - user_postgres_data:/var/lib/postgresql/data
+      - ./postgres-init/pg_hba.conf:/etc/postgresql/pg_hba.conf
+      - ./postgres-init/postgresql.conf:/etc/postgresql/postgresql.conf
+      - ./postgres-init/init.sql:/docker-entrypoint-initdb.d/init.sql
+    command: postgres -c config_file=/etc/postgresql/postgresql.conf
     networks:
       - app-net
 
@@ -100,6 +105,10 @@ services:
       POSTGRES_DB: daily-report
     volumes:
       - daily_postgres_data:/var/lib/postgresql/data
+      - ./postgres-init/pg_hba.conf:/etc/postgresql/pg_hba.conf
+      - ./postgres-init/postgresql.conf:/etc/postgresql/postgresql.conf
+      - ./postgres-init/init.sql:/docker-entrypoint-initdb.d/init.sql
+    command: postgres -c config_file=/etc/postgresql/postgresql.conf
     networks:
       - app-net
 
@@ -114,6 +123,10 @@ services:
       POSTGRES_DB: five-minute-report
     volumes:
       - five_minute_postgres_data:/var/lib/postgresql/data
+      - ./postgres-init/pg_hba.conf:/etc/postgresql/pg_hba.conf
+      - ./postgres-init/postgresql.conf:/etc/postgresql/postgresql.conf
+      - ./postgres-init/init.sql:/docker-entrypoint-initdb.d/init.sql
+    command: postgres -c config_file=/etc/postgresql/postgresql.conf
     networks:
       - app-net
 
@@ -128,6 +141,10 @@ services:
       POSTGRES_DB: mode-report
     volumes:
       - mode_postgres_data:/var/lib/postgresql/data
+      - ./postgres-init/pg_hba.conf:/etc/postgresql/pg_hba.conf
+      - ./postgres-init/postgresql.conf:/etc/postgresql/postgresql.conf
+      - ./postgres-init/init.sql:/docker-entrypoint-initdb.d/init.sql
+    command: postgres -c config_file=/etc/postgresql/postgresql.conf
     networks:
       - app-net
   consul-server:
