--- a/postgres-init/postgres.conf
+++ b/postgres-init/postgres.conf
@@ -1,5 +1,3 @@
-listen_addresses = '*'
 wal_level = replica
-max_wal_senders = 5
 archive_mode = on
-archive_command = 'cd .'
+archive_command = 'cp %p /var/lib/postgresql/wal_archive/%f'
