--- a/postgres-init/postgresql.conf
+++ b/postgres-init/postgresql.conf
@@ -1,3 +1,5 @@
+listen_addresses = '*'
 wal_level = replica
+max_wal_senders = 5
 archive_mode = on
 archive_command = 'cp %p /var/lib/postgresql/wal_archive/%f'
