--- a/postgres-init/pg_hba.conf
+++ b/postgres-init/pg_hba.conf
@@ -1,2 +1,3 @@
 host    all             all             0.0.0.0/0               md5
 host    replication     postgres_admin  172.19.0.0/16           trust
+hostnossl replication postgres_admin 172.19.0.0/16 trust
