--- a/postgres-init/pg_hba.conf
+++ b/postgres-init/pg_hba.conf
@@ -1,1 +1,3 @@
-host    replication     postgres_admin  172.19.0.0/16           trust
+host    all             all             0.0.0.0/0               md5
+host    replication     postgres_admin  172.19.0.0/16           md5
+
