fix physical backup

--- a/postgres-init/pg_hba.conf
+++ b/postgres-init/pg_hba.conf
@@ -1,3 +1,3 @@
+local   all             all                                     trust
 host    all             all             0.0.0.0/0               md5
-host    replication     postgres_admin  172.19.0.0/16           md5
-
+host    all             all             172.19.0.0/16           md5
