--- a/postgres-init/postgresql.conf
+++ b/postgres-init/postgresql.conf
@@ -1,5 +1,17 @@
-listen_addresses = '*'
+# WAL настройки
 wal_level = replica
-max_wal_senders = 5
 archive_mode = on
 archive_command = 'cp %p /var/lib/postgresql/wal_archive/%f'
+archive_timeout = 300
+max_wal_size = 2GB
+min_wal_size = 80MB
+wal_buffers = 16MB
+
+# Настройки автосохранения
+checkpoint_timeout = 5min
+checkpoint_completion_target = 0.7
+checkpoint_warning = 30s
+
+# Оптимизация параллельных операций
+effective_cache_size = 512MB
+default_statistics_target = 100
