fix physical backup

--- a/pg-dump-backup/Dockerfile
+++ b/pg-dump-backup/Dockerfile
@@ -1,19 +1,19 @@
 FROM postgres:17.2
 
 RUN apt-get update && \
-    apt-get install -y pgbackrest cron && \
+    apt-get install -y cron gzip && \
     rm -rf /var/lib/apt/lists/*
 
-COPY pgbackrest.conf /etc/pgbackrest/pgbackrest.conf
-COPY backup.sh /scripts/backup.sh
-COPY cronjob /etc/cron.d/pgbackrest-cron
-COPY pgbackrest-entrypoint.sh /entrypoint.sh
+RUN mkdir -p /backups /scripts
+
+COPY scripts/backup.sh /scripts/backup.sh
+COPY scripts/cronjob /etc/cron.d/pgdump-cron
+COPY entrypoint.sh /entrypoint.sh
 
 RUN chmod +x /scripts/backup.sh /entrypoint.sh
-RUN chmod 0644 /etc/cron.d/pgbackrest-cron
-RUN crontab /etc/cron.d/pgbackrest-cron
+RUN chmod 0644 /etc/cron.d/pgdump-cron
+RUN crontab /etc/cron.d/pgdump-cron
 
 VOLUME /backups
 
 ENTRYPOINT ["/entrypoint.sh"]
-
