fix incr dependency for postgres

--- a/pg-dump-backup/Dockerfile
+++ b/pg-dump-backup/Dockerfile
@@ -1,19 +1,8 @@
-FROM debian:bullseye-slim
-
-ENV PG_VERSION=17.2
-ENV PATH="/usr/local/pgsql/bin:$PATH"
+FROM postgres:17.2
 
 RUN apt-get update && \
-    apt-get install -y build-essential libreadline-dev zlib1g-dev wget git \
-    libicu-dev pkg-config cron gzip && \
+    apt-get install -y cron gzip && \
     rm -rf /var/lib/apt/lists/*
-
-WORKDIR /usr/src
-RUN wget https://ftp.postgresql.org/pub/source/v$PG_VERSION/postgresql-$PG_VERSION.tar.gz && \
-    tar -xzf postgresql-$PG_VERSION.tar.gz && \
-    cd postgresql-$PG_VERSION && \
-    ./configure --with-includes=/usr/include --with-libraries=/usr/lib --with-incremental-backup && \
-    make && make install
 
 RUN mkdir -p /backups /scripts
 
