fix incr dependency for postgres

--- a/postgres-init/postgresql.conf
+++ b/postgres-init/postgresql.conf
@@ -1,6 +1,7 @@
 listen_addresses = '*'
 # WAL настройки
 wal_level = replica
+wal_summary = on
 archive_mode = on
 archive_command = 'cp %p /var/lib/postgresql/wal_archive/%f'
 archive_timeout = 300
